objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field needed to register if a Contact Person gave his consent.</description>
        <inlineHelpText>Did you get formal consent from this account/contact?
Do we have permission to send marketing related / promotional e-mails?
Note that this is a legal requirement!</inlineHelpText>
        <label>Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CorrespondenceLanguage__c</fullName>
        <inlineHelpText>If you leave this field empty, the correspondence language will automatically be copied from the account</inlineHelpText>
        <label>Correspondence Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>A field to select Department of the Contact Person</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance &amp; Administration</fullName>
                </value>
                <value>
                    <fullName>HSEQ</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Order processing</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Quality control</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Samples</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                    <isActive>false</isActive>
                    <label>Logistics</label>
                </value>
                <value>
                    <fullName>Planning</fullName>
                    <isActive>false</isActive>
                    <label>Planning</label>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                    <isActive>false</isActive>
                    <label>Supply Chain</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HelixId__c</fullName>
        <externalId>true</externalId>
        <label>HelixId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <externalId>true</externalId>
        <label>IntegrationId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsInactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for Riva integration. Will be unchecked for all contacts by default untill we add custom logic.</description>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Default record type</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>